@@ -5,7 +5,7 @@
 <p>image link with caption</p>
 <p><a href="/wiki/en/Image:Test_Image.jpg" title="Image:Test Image.jpg">Caption for link</a></p>
 <p>non-existent image with caption</p>
-<p><a href="/wiki/en/Special:Upload?topic=Image:Non Existent Image.jpg" class="edit" title="Special:Upload">Image:Non Existent Image.jpg</a></p>
+<p><a href="/wiki/en/Special:Upload?topic=Image:Non_Existent_Image.jpg" class="edit" title="Special:Upload">Image:Non Existent Image.jpg</a></p>
 <p>left-aligned image</p>
 <div class="floatleft"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/test_image.jpg" width="400" height="267" alt="Test Image.jpg" /></a></div>
 <p>right-aligned image</p>
@@ -108,8 +108,8 @@
 </div>
 <p><a href="/files/test_image.jpg" title="Media:Test Image.jpg">Media:Test Image.jpg</a></p>
 <p><a href="/files/test_image.jpg" title="Media:Test Image.jpg">test image caption</a></p>
-<p><a href="/wiki/en/Special:Upload?topic=Image:Non-existent image.jpg" title="Media:Non-existent image.jpg">Media:Non-existent image.jpg</a></p>
-<p><a href="/wiki/en/Special:Upload?topic=Image:Non-existent image.jpg" title="Media:Non-existent image.jpg">non-existent image caption</a></p>
+<p><a href="/wiki/en/Special:Upload?topic=Image:Non-existent_image.jpg" title="Media:Non-existent image.jpg">Media:Non-existent image.jpg</a></p>
+<p><a href="/wiki/en/Special:Upload?topic=Image:Non-existent_image.jpg" title="Media:Non-existent image.jpg">non-existent image caption</a></p>
 <p>resize #1 <img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></p>
 <p>resize #2 <img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></p>
 <p>resize #3 <img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></p>
@@ -178,3 +178,4 @@
 <div class="thumbcaption">caption2</div>
 </div>
 </div>
+<p><a href="/wiki/en/Special:Upload?topic=Image:Invalid_Image_%22Name%22.jpg" class="edit" title="Special:Upload">Image:Invalid Image &quot;Name&quot;.jpg</a></p>
